# Panoramic

./: CMakeLists.txt  DescriptorsManager.cpp  DescriptorsManager.h  PanoramaMaker.cpp  PanoramaMaker.h  README.md  config.json  main.cpp
include/: PanoramaMaker.h
include/json/: json.h
src/: Calibrator.cpp  DescriptorsManager.cpp  PanoramaMaker.cpp  main.cpp  mongoose.c
src/json/: jsoncpp.cpp
